* fixed file browser scroll height issue * fixed too much padding to body on login page * incremented version number

--- a/bookface_light.css
+++ b/bookface_light.css
@@ -1,8 +1,8 @@
 /*
 	Name	   : Bookface Light
-	Version    : 1.3
+	Version    : 1.4
     Licence    : AGPL
-    Created on : 11 Feb 2025
+    Created on : 12 Feb 2025
     Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
 */
 
@@ -152,6 +152,7 @@
 			.dropdown-menu > li.active:focus > a {
 				color: var(--link-color);
 				background-color: transparent;
+				background-image: none;
 			}
     .form-control {
     	background: var(--nav-bg);
@@ -891,7 +892,9 @@
 		   border-color: transparent !important;
 		   background-color: transparent !important;
 	}
-		   
+	.fbrowser-content-container.justified-gallery {
+    	max-height: 100% !important;
+	}		   
 	#jot-title,
 	#jot-category {
 		   background-color: #fff !important;
@@ -2035,6 +2038,9 @@ a.tag.label,
 		}	
 	}
 /* LOGIN AND INFO SCREENS */
+body.mod-home {
+	padding-top: 10px !important;
+}
 .mod-home .navbar,
 .mod-home #topbar-second{
 	background-color: transparent !important;
